everything works fine

--- a/client/src/components/logsign/IFCC.css
+++ b/client/src/components/logsign/IFCC.css
@@ -1,8 +1,20 @@
 .input-field input:focus + label {
-    color: tomato !important;
-  }
-  /* label underline focus color */
-  .row .input-field input:focus {
-    border-bottom: 1px solid tomato !important;
-    box-shadow: 0 1px 0 0 tomato !important
-  }
+  color: #673ab7 !important;
+}
+/* label underline focus color */
+.row .input-field input:focus {
+  border-bottom: 1px solid #673ab7 !important;
+  box-shadow: 0 1px 0 0 #673ab7 !important
+}
+.tabs .tab a{
+  color:#b39ddb;
+} /*Black color to the text*/
+.tabs .tab a:hover {
+  color:#673ab7;
+} /*Text color on hover*/
+.tabs .tab a.active {
+  color:#673ab7;
+} /*Background and text color when a tab is active*/
+.tabs .indicator {
+  background-color:#673ab7;
+} /*Color of underline*/
