--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -1,3 +1,5 @@
+/*NEEDED IN SearchBar.jsx*/
+
 #searchbarform{
   margin-top: 5px;
   margin-left: 30px;
@@ -6,12 +8,13 @@
   background: inherit;
 }
 input.search-field {
+  margin-bottom: 0;
   font-weight: 500;
   color: #000;
   border: 0;
   border-radius: 2px;
   height: 36px;
-  padding: 0 0 0 60px;
+  padding: 0 0 0 40px;
   width: 200px;
   background: #FFF;
   transition: background 0.2s, width .2s;
@@ -28,7 +31,10 @@ input.search-field:focus {
 .search-icon {
   position: absolute;
   top: 0;
-  padding-left: 20px;
+  padding-left: 10px;
   color: rgba(0, 0, 0, 0.54);
 }
 
+#search-input:hover{
+  box-shadow: none
+}
