--- a/client/src/components/css/SearchBar.css
+++ b/client/src/components/css/SearchBar.css
@@ -1,7 +1,7 @@
 /*NEEDED IN SearchBar.jsx*/
 
 #searchbarform{
-  margin-left: 30px;
+  float: center;
   position: relative;
   height: 100%;
   background: inherit;
@@ -13,7 +13,7 @@ input.search-field {
   border: 0;
   border-radius: 2px;
   height: 36px;
-  padding: 0 0 0 40px;
+  padding: 0 0 0 20px;
   width: 200px;
   background: #FFF;
   transition: background 0.2s, width .2s;
