--- a/client/src/components/css/profileheader.css
+++ b/client/src/components/css/profileheader.css
@@ -21,7 +21,42 @@
 #followContainer button{
     width: 100%;
     padding: 5px;
-    background-color: #FFF;
-    border: none;
+    background-color: transparent;
+    border: 1px solid #673ab7;
     border-radius: 5px;
+    transition: background-color 0.2s, color 0.2s;
+}
+#followContainer button:hover {
+    background-color: #673ab7;
+    color: #FFF;
+}
+#editProfileButton {
+    width: 200px;
+    padding: 5px;
+    background-color: transparent;
+    border: 1px solid #673ab7;
+    border-radius: 5px;
+    transition: background-color 0.2s, color 0.2s;
+}
+#editProfileButton:hover {
+    background-color: #673ab7;
+    color: #FFF;
+}
+#editProfileDiv {
+    margin-top: 10px;
+    width: 200px;
+    text-align: center;
+    border: 1px solid #673ab7;
+    border-radius: 5px;
+}
+.editProfileSubButtons {
+    padding: 10px;
+    border: none;
+}
+
+.editProfileSubButtons:hover {
+    cursor: pointer;
+    background-color: #673ab7;
+    color: #FFF;
+    border: none;
 }
