--- a/client/src/components/css/SearchBar.css
+++ b/client/src/components/css/SearchBar.css
@@ -35,3 +35,9 @@ input.search-field:focus {
 #search-input:hover{
   box-shadow: none
 }
+
+@media only screen and (max-width: 420px) {
+  input.search-field:focus {
+    width: 220px;
+  }
+}
