--- a/client/src/components/css/postheading.css
+++ b/client/src/components/css/postheading.css
@@ -20,3 +20,11 @@
 a {
     color: inherit
 }
+
+@media only screen and (max-width: 600px) {
+    #postDropDown {
+        position : absolute;
+        top : 45px;
+        right : 30px;
+    }
+  }
