--- a/client/src/components/css/postheading.css
+++ b/client/src/components/css/postheading.css
@@ -2,10 +2,11 @@
     position : absolute;
     top : 65px;
     right : 50px;
-    background-color : #673ab7;
+    background-color : #ffffff;
     z-index: 2;
-    color: white;
+    color: #673ab7;
     border-radius: 5px;
+    border : 1px solid #673ab7;
     visibility: hidden;
     opacity: 0;
     transition: opacity 300ms, visibility 600ms;
@@ -15,7 +16,7 @@
 }
 #postDropDown div:hover{
     cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.5)
+    background-color: rgba(0, 0, 0, 0.1)
 }
 a {
     color: inherit
