added authorization and adjust some styles and added other features

--- a/client/src/components/css/postheading.css
+++ b/client/src/components/css/postheading.css
@@ -21,7 +21,9 @@
 a {
     color: inherit
 }
-
+.fa-ellipsis-v:hover{
+    color : #673ab7
+}
 @media only screen and (max-width: 600px) {
     #postDropDown {
         position : absolute;
