--- a/client/src/components/css/makepost.css
+++ b/client/src/components/css/makepost.css
@@ -18,7 +18,7 @@ textarea:focus {
 }
 #makePostImageIcon:hover {
     cursor: pointer;
-    color: black;
+    color: #673ab7;
 }
 .disabled{
     pointer-events: none;
