added image enlargement and resized pp in profile and posts

--- a/client/src/components/css/postcontent.css
+++ b/client/src/components/css/postcontent.css
@@ -6,4 +6,9 @@
 .post_image_container{
     overflow: hidden;
     max-height: 500px;
+    display: flex;
+    align-items: center;
+}
+.post_image_container:hover{
+    cursor: pointer;
 }
